--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
     <section class="promo">
       <div class="promo__wrapper">
         <figure class="promo__logo">
-          <img class="promo__img" src="img/logo.jpg" alt="logorayban" width="190" height="100">
+          <img class="promo__img" src="img/logoRayBan-left.jpg" alt="logorayban" width="190" height="100">
         </figure>
         <h2 class="promo__title">RB2132 901 New Wayfarer</h2>
         <p class="promo__text">
