--- a/src/shopping-bag.html
+++ b/src/shopping-bag.html
@@ -41,10 +41,9 @@
   </header>
   <main>
     <div class="content">
-    <table class="table">
-      <h2 class="table__title">Shopping Bag</h2>
-
-      <tr class="table__tr">
+      <table class="table">
+        <h2 class="table__title">Shopping Bag</h2>
+        <tr>
           <td class="table__td">
             <a href="#"><img src="img/basket-product-1.jpg" alt="апельсиновое" width="100" height="66"></a>
           </td>
@@ -53,10 +52,10 @@
             </a>
           </td>
           <td class="table__col  table__td"><span class="table__number">1</span><span class="table__price-td">&#163;54.00</span></td>
-      </tr>
+        </tr>
 
 
-      <tr class="table__tr">
+        <tr>
           <td class="table__td">
             <a href="#"><img src="img/basket-product-2.jpg" alt="апельсиновое" width="100" height="66"></a>
           </td>
@@ -65,25 +64,25 @@
             </a>
           </td>
           <td class="table__col  table__td"><span class="table__number">2</span> <span class="price-td">&#163;32.00</span></td>
-      </tr>
+        </tr>
 
-      <tr>
-        <td>
-          <a href="#"><img src="img/basket-product-3.jpg" alt="апельсиновое" width="100" height="66"></a>
-        </td>
-        <td><a class="table__product-name" href="#">Fred Perry Dark Yellow Checked Shirt
+        <tr>
+          <td class="table__td  table__td--border-none">
+            <a href="#"><img src="img/basket-product-3.jpg" alt="апельсиновое" width="100" height="66"></a>
+          </td>
+          <td class="table__td  table__td--border-none"><a class="table__product-name" href="#">Fred Perry Dark Yellow Checked Shirt
           <a  class="table__link" href="#">[Remove]</a>
-          </a>
-        </td>
-        <td class="table__col"><span class="table__number">3</span><span class="price-td">&#163;70.00</span></td>
-      </tr>
-      <tr>
-        <td class="table__total-price" colspan="5"><span>Total: &#163;156.00</span></td>
-      </tr>
-      <tr>
-        <td colspan="5"><a class="table__btn" href="#">Checkout</a></td>
-      </tr>
-    </table>
+            </a>
+          </td>
+          <td class="table__col  table__td  table__td--border-none"><span class="table__number">1</span><span class="price-td">&#163;70.00</span></td>
+        </tr>
+        <tr>
+          <td class="table__total-price" colspan="5"><span>Total: &#163;156.00</span></td>
+        </tr>
+        <tr>
+          <td colspan="5"><a class="table__btn" href="#">Checkout</a></td>
+        </tr>
+      </table>
     </div>
 
   </main>
